k8s/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: pihole
        image: pihole/pihole:latest
        # Ports nicht explizit deklarieren bei hostNetwork - lauscht direkt auf Host-Ports
        volumeMounts:
        - name: pihole-data
          mountPath: /etc/pihole
        - name: pihole-toml-config
          mountPath: /etc/pihole/pihole.toml
          subPath: pihole.toml
          readOnly: true
        - name: pihole-dnsmasq
          mountPath: /etc/dnsmasq.d
        - name: dnsmasq-custom-config
          mountPath: /etc/dnsmasq.d/99-custom.conf
          subPath: 99-custom.conf
          readOnly: true
        resources:
          limits:
            memory: "512Mi"       # Limit für Spitzenlast
      volumes:
      - name: pihole-data
        persistentVolumeClaim:
          claimName: pihole-data
      - name: pihole-toml-config
        configMap:
          name: pihole-toml-config
      - name: adlists-config
        configMap:
          name: pihole-adlists-config
      - name: pihole-dnsmasq
        emptyDir: {}
      - name: dnsmasq-custom-config
        configMap:
          name: pihole-dnsmasq-custom
      nodeSelector:
        kubernetes.io/hostname: zuhause
