k8s/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  type: ClusterIP
  ports:
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: pihole
  sessionAffinity: None
